--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ h5py==2.10.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.3
-joblib==0.14.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.0
 Markdown==3.1.1
@@ -36,4 +35,5 @@ tensorflow-estimator==2.1.0
 termcolor==1.1.0
 urllib3==1.25.7
 Werkzeug==0.16.0
+wincertstore==0.2
 wrapt==1.11.2
